secure-edge-platform/deploy/k8s/03-correlator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: correlator
  namespace: secure-edge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: correlator
  template:
    metadata:
      labels:
        app: correlator
    spec:
      containers:
        - name: correlator
          image: secure-edge/correlator:latest
